# pangeo-pyinterp

./: .clang-format  .clangd  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  TODO.md  azure-pipelines.yml  conftest.py  pyproject.toml  pyrightconfig.json  pytest.ini  readthedocs.yml  run-clang-tidy.py  setup.cfg  setup.py  stubgen.py
.github/: pull_request_template.md
cxx/: CMakeLists.txt
cxx/include/pyinterp/: bivariate.hpp  broadcast.hpp  dateutils.hpp  descriptive_statistics.hpp  eigen.hpp  fill.hpp  format_byte.hpp  frame.hpp  geohash.hpp  histogram2d.hpp  interpolate1d.hpp  math.hpp  parallel_for.hpp  period.hpp  quadrivariate.hpp  rtree.hpp  serialization_buffer.hpp  tensor.hpp  trivariate.hpp  version.hpp.in
cxx/include/pyinterp/config/: common.hpp  fill.hpp  geometric.hpp  rtree.hpp  windowed.hpp
cxx/include/pyinterp/fill/: boundary.hpp  enum.hpp  fft_inpaint.hpp  gauss_seidel.hpp  helpers.hpp  loess.hpp  matrix.hpp  multi_grid.hpp  utils.hpp
cxx/include/pyinterp/geodetic/: point.hpp
cxx/include/pyinterp/geohash/: base32.hpp  int64.hpp  string.hpp
cxx/include/pyinterp/geometry/: box.hpp  crossover.hpp  linestring.hpp  multi_linestring.hpp  multi_point.hpp  multi_polygon.hpp  point.hpp  point_traits.hpp  polygon.hpp  ring.hpp  rtree.hpp  rtree_value_traits.hpp  segment.hpp
cxx/include/pyinterp/math/: axis.hpp  dct2d.hpp  descriptive_statistics.hpp  fft2d.hpp  fill.hpp  tdigest.hpp  temporal_axis.hpp
cxx/include/pyinterp/pybind/: axis.hpp  binning.hpp  config.hpp  dateutils.hpp  descriptive_statistics.hpp  dtype_to_str.hpp  fill.hpp  geohash.hpp  geometric.hpp  geometry.hpp  grid.hpp  grid_dispatch.hpp  histogram2d.hpp  ndarray_serialization.hpp  numpy.hpp  period.hpp  rtree.hpp  rtree4d.hpp  tdigest.hpp  temporal_axis.hpp  windowed.hpp
cxx/lib/geodetic/: point.cpp
cxx/lib/geohash/: base32.cpp
cxx/module/: bicubic.cpp  binning.cpp  dateutils.cpp  descriptive_statistics.cpp  enum.cpp  fill.cpp  geodetic.cpp  grid.cpp  histogram2d.cpp  interpolate1d.cpp  rtree.cpp
cxx/module/geohash/: int64.cpp
cxx/src/pybind/: axis.cpp  binning.cpp  config.cpp  dateutils.cpp  descriptive_statistics.cpp  fill.cpp  geohash_base.cpp  geometry.cpp  grid.cpp  histogram2d.cpp  main.cpp  period.cpp  rtree4d.cpp  rtree_base.cpp  tdigest.cpp  temporal_axis.cpp
cxx/src/pybind/fill/: fft_inpaint.cpp  gauss_seidel.cpp  loess.cpp  matrix.cpp  multigrid.cpp
cxx/src/pybind/geohash/: geohash_core.cpp  string.cpp
cxx/src/pybind/geometric/: bivariate_geometric.cpp  quadrivariate_geometric.cpp  trivariate_geometric.cpp
cxx/src/pybind/geometry/: cartesian.cpp  geographic.cpp  satellite.cpp
cxx/src/pybind/windowed/: bivariate_windowed.cpp  quadrivariate_windowed.cpp  trivariate_windowed.cpp  univariate.cpp
cxx/tests/: CMakeLists.txt  geometry_rtree.cpp  interpolation_akima.cpp  interpolation_bicubic.cpp  interpolation_linear.cpp  math.cpp  math_dct2d.cpp  math_fft2d.cpp  math_kriging.cpp  math_linear.cpp  math_spline.cpp  parallel_for.cpp  serialization_buffer.cpp
cxx/tests/config/: common.cpp  fill.cpp  geometric.cpp  rtree.cpp  windowed.cpp
cxx/tests/dateutils/: dateutils.cpp  period.cpp
cxx/tests/geohash/: base32.cpp  int64.cpp  string.cpp
cxx/tests/geometry/: rtree.cpp  rtree_observation.cpp  satellite_rotation.cpp  satellite_swath.cpp  satellite_track_decomposition.cpp
cxx/tests/geometry/geographic/: coordinates.cpp  spheroid.cpp
cxx/tests/math/axis/: axis.cpp  axis_container.cpp  temporal_axis.cpp
cxx/tests/math/fft/: dct2d.cpp  fft2d.cpp
cxx/tests/math/fill/: boundary.cpp  fft_inpaint.cpp  gauss_seidel.cpp  loess.cpp  matrix.cpp  multi_grid.cpp
cxx/tests/math/interpolate/: anisotropic_covariance.cpp  bilinear_weights.cpp  bracket_finder.cpp  cache.cpp  cache_loader.cpp  geometric_cache.cpp  kriging.cpp  linear.cpp  nearest.cpp  rbf.cpp  window_cache.cpp  window_cache_loader.cpp  window_function.cpp
cxx/tests/math/statistics/: descriptive_statistics.cpp  tdigest.cpp
cxx/tests/math/stats/: tdigest.cpp
src/core/: CMakeLists.txt
src/core/detail/: axis.cpp
src/core/detail/axis/: container.cpp
src/core/detail/gsl/: error_handler.cpp
src/core/include/pyinterp/: axis.hpp  bicubic.hpp  bivariate.hpp  grid.hpp  rtree.hpp  trivariate.hpp
src/core/module/: axis.cpp  bicubic.cpp  cartesian.cpp  geodetic.cpp  grid.cpp  main.cpp  rtree.cpp
src/core/tests/: CMakeLists.txt  axis.cpp  axis_container.cpp  geodetic_coordinates.cpp  geodetic_rtree.cpp  geodetic_system.cpp  geometry_rtree.cpp  gsl.cpp  math.cpp  math_bicubic.cpp  math_bivariate.cpp  math_idw.cpp  math_linear.cpp  math_trivariate.cpp  thread.cpp
src/pyinterp/core/: CMakeLists.txt  __init__.pyi  array.pyi  dateutils.pyi  fill.pyi  geodetic.pyi
src/pyinterp/core/detail/: axis.cpp
src/pyinterp/core/geohash/: __init__.pyi  int64.pyi  string.pyi
src/pyinterp/core/lib/: delaunay.cpp
src/pyinterp/core/module/: axis.cpp  bicubic.cpp  binning.cpp  bivariate.cpp  bivariate_interpolator.cpp  dateutils.cpp  delaunay.cpp  descriptive_statistics.cpp  enum.cpp  fill.cpp  geodetic.cpp  geohash.cpp  grid.cpp  histogram2d.cpp  interpolate1d.cpp  main.cpp  period.cpp  quadrivariate.cpp  rtree.cpp  spline.cpp  statistics.cpp  streaming_histogram.cpp  trivariate.cpp
src/pyinterp/core/storage/: __init__.pyi  unqlite.pyi
src/pyinterp/core/tests/: CMakeLists.txt  axis.cpp  axis_container.cpp  geodetic_coordinates.cpp  geodetic_rtree.cpp  geodetic_system.cpp  geometry_rtree.cpp  gsl.cpp  interpolation_akima.cpp  interpolation_bicubic.cpp  interpolation_bilinear.cpp  interpolation_cspline.cpp  interpolation_linear.cpp  interpolation_polynomial.cpp  interpolation_search.cpp  interpolation_steffen.cpp  math.cpp  math_bicubic.cpp  math_binning.cpp  math_bivariate.cpp  math_descriptive_statistics.cpp  math_kriging.cpp  math_linear.cpp  math_loess.cpp  math_rbf.cpp  math_spline.cpp  math_streaming_histogram.cpp  math_trivariate.cpp  math_window_function.cpp  thread.cpp
(+907 files in other folders)
