[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "cmake"]
build-backend = "backend"
backend-path = ["_custom_build"]

[tool.setuptools_scm]
write_to = "pyinterp/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py312"
line-length = 79
exclude = [
  "*.pyi",
  "docs",
  "examples",
  "scripts",
]
[tool.ruff.lint.pycodestyle]
max-line-length = 80

[tool.ruff.lint]
ignore = ["PLR0913", "D203", "D213"]
select = [
  "ANN",    # flake8-annotations
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "C4",     # comprehensions
  "C90",    # mccabe
  "D",      # docstring lints
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "I",      # isort
  "INT",    # flake8-gettext
  "NPY002", # numpy-legacy-random
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # misc lints
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "TCH",    # type-checking imports
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["PLR", "PT"]

[tool.ruff.lint.isort]
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "3.0"
norecursedirs = "third_party"
testpaths = "build"
addopts = "--import-mode=importlib"

# ---------------------------------------------------------------------------
# cibuildwheel — binary wheel configuration
# Run with: pipx run cibuildwheel --platform linux  (local test)
# Triggered by: .github/workflows/wheels.yml
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
# Build CPython 3.12–3.14 (+ 3.14 free-threaded); skip 32-bit and musl builds
build = "cp312-* cp313-* cp314-* cp314t-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*"]
# Opt into free-threaded (cp*t-*) builds and still-pre-release cp314 matrix.
enable = ["cpython-freethreading", "cpython-prerelease"]
build-verbosity = 1

# ------------------------------------------------------------------
# Linux (manylinux_2_28 — AlmaLinux 8, glibc ≥ 2.28, gcc ≥ 12)
# Boost headers are installed via miniforge inside the container
# because the default AlmaLinux repos only ship Boost < 1.90.
# ------------------------------------------------------------------
[tool.cibuildwheel.linux]
# manylinux2014 ships GCC 10 — too old for C++23. manylinux_2_28 ships GCC 14.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = """
curl -fsSL \
  "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-$(uname -m).sh" \
  -o /tmp/miniforge.sh \
  && bash /tmp/miniforge.sh -b -p /opt/conda \
  && /opt/conda/bin/conda install -y -c conda-forge 'libboost-headers>=1.90'
"""
environment = {CMAKE_PREFIX_PATH = "/opt/conda"}

# ------------------------------------------------------------------
# macOS (Intel macos-13 and ARM macos-latest runners)
# std::to_chars for floating-point requires macOS ≥ 13.4.
# brew --prefix boost resolves to the correct path on both archs.
# ------------------------------------------------------------------
[tool.cibuildwheel.macos]
before-all = "brew install boost || true"
environment = {MACOSX_DEPLOYMENT_TARGET = "13.4", CMAKE_PREFIX_PATH = "$(brew --prefix boost)"}

# ------------------------------------------------------------------
# Windows
# Boost headers are installed via mamba-org/setup-micromamba before
# cibuildwheel runs (see wheels.yml).  The conda prefix is forwarded
# via CIBW_ENVIRONMENT_WINDOWS in the workflow env block.
# ------------------------------------------------------------------
# No extra [tool.cibuildwheel.windows] table needed here; the workflow
# injects CMAKE_PREFIX_PATH at runtime.
