[build-system]
requires = ["setuptools", "cmake"]

[flake8]
exclude = docs,tests
max-line-length = 80
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # line break after binary operator
    W504
    # whitespace before :
    E203

[isort]
combine_as_imports=True
force_grid_wrap=0
force_sort_within_sections=True
force_to_top=typing
include_trailing_comma=True
line_length=80
multi_line_output=3
skip=
    build
    docs/source/conf.py
