macro (add_testcase testname)
    set(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${testname}.cpp")
    add_executable(test_${testname} ${FILES})
    target_link_libraries(test_${testname} pyinterp gtest_main)
    add_test(NAME test_${testname} COMMAND ${EXECUTABLE_OUTPUT_PATH}/test_${testname})
endmacro()

add_testcase(axis)
add_testcase(axis_container)
add_testcase(geodetic_coordinates)
add_testcase(geodetic_system)
add_testcase(geometry_rtree)
add_testcase(math)
